Password renewal + login ended
Co-Authored-By: Nisa Dost <76488638+NisaDost@users.noreply.github.com>

--- a/ProjectManagament-WebApp/Views/User/ForgotPassword.cshtml
+++ b/ProjectManagament-WebApp/Views/User/ForgotPassword.cshtml
@@ -13,17 +13,24 @@
                     <div class="card-body p-5 text-center">
                         <form action="ForgotPassword" method="post">
                             <h2 class="fw-bold mb-2 text-uppercase">Renew Password</h2>
-
                             <div class="form-outline form-white mb-4">
                                 <label class="form-label fw-bold">Email</label>
                                 <input asp-for="Email" type="email" id="email" placeholder="sample@example.com" class="form-control form-control-lg" required />
                             </div>
-
                             <div class="form-outline form-white mb-4 d-none" id="code">
                                 <label class="form-label fw-bold">Code</label>
-                                <input asp-for="Code" type="text" placeholder="" class="form-control form-control-lg" />
+                                <input asp-for="Code" type="number" placeholder="0000" class="form-control form-control-lg" maxlength="4" />
                             </div>
-
+                            <div class="alert alert-success mt-3 d-none" role="alert" id="countdown">
+                            </div>
+                            <div class="alert alert-danger mt-3 d-none" role="alert" id="error">
+                            </div>
+                            @if (!string.IsNullOrEmpty(ViewBag.Error))
+                            {
+                                <div class="alert alert-danger mt-3" role="alert">
+                                    @ViewBag.Error
+                                </div>
+                            }
                             <a class="btn btn-outline-light btn-lg px-5" id="sendCode">Send</a>
                             <button class="btn btn-outline-light btn-lg px-5 d-none" id="submit" type="submit">Next</button>
                         </form>
@@ -36,6 +43,39 @@
 
 @section Scripts {
     <script>
+        const addMinutesToDate = (date, n) => {
+            const d = new Date(date);
+            d.setTime(d.getTime() + n * 60_000);
+            return d;
+        };
+
+        function countdown() {
+            var countDownDate = addMinutesToDate(new Date().getTime(), 5).getTime();
+
+            // Update the count down every 1 second
+            var x = setInterval(function () {
+
+                // Get today's date and time
+                var now = new Date().getTime();
+
+                // Find the distance between now and the count down date
+                var distance = countDownDate - now;
+
+                // Time calculations for days, hours, minutes and seconds
+                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+                // Output the result in an element with id="demo"
+                document.getElementById("countdown").innerHTML = minutes + "m " + seconds + "s <br/ >Code has been sent to your email.";
+
+                // If the count down is over, write some text
+                if (distance < 0) {
+                    clearInterval(x);
+                    document.getElementById("countdown").innerHTML = "EXPIRED";
+                }
+            }, 1000);
+        }
+
         $("#sendCode").on("click", function () {
             $.ajax(
                 {
@@ -46,14 +86,19 @@
                     success:
                         function (response) {
                             if (response.success) {
+                                $("#error").addClass("d-none").html("");
                                 $("#sendCode").addClass("d-none");
                                 $("#submit").removeClass("d-none");
                                 $("#code").removeClass("d-none");
+                                $("#countdown").removeClass("d-none");
+                                countdown();
                             }
                         },
                     error:
                         function (response) {
-                            alert("Error: " + response);
+                            console.log(response.responseJSON);
+                            console.log(response.responseJSON.errorMessage);
+                            $("#error").removeClass("d-none").html(response.responseJSON.errorMessage);
                         }
                 });
         });
