--- a/ProjectManagament-WebApp/wwwroot/css/site.css
+++ b/ProjectManagament-WebApp/wwwroot/css/site.css
@@ -16,3 +16,13 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
