Converstation history added to database
Co-Authored-By: Nisa Dost <76488638+NisaDost@users.noreply.github.com>

--- a/ProjectManagament-WebApp/Views/Home/Index.cshtml
+++ b/ProjectManagament-WebApp/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
-
 }
 
 @if (User.Identity.IsAuthenticated) //logged in
@@ -8,13 +7,13 @@
     <div class="row">
         <ul class="nav nav-pills nav-fill">
             <li class="nav-item mx-2">
-                <button class="nav-link module fw-bold text-light bg-danger active" id="module-1" value="29931809-ec70-433b-9ecf-def9c7189e39" type="button">Module 1</button>
+                <button class="nav-link module fw-bold text-light bg-danger active" id="module-1" data-module="29931809-ec70-433b-9ecf-def9c7189e39" type="button">Module 1</button>
             </li>
             <li class="nav-item">
-                <button class="nav-link module fw-bold text-light bg-success bg-opacity-25" id="module-2" value="394ad26d-99bf-48ff-bcd7-332d5c66f7ce" type="button">Module 2</button>
+                <button class="nav-link module fw-bold text-light bg-success bg-opacity-25" id="module-2" data-module="394ad26d-99bf-48ff-bcd7-332d5c66f7ce" type="button">Module 2</button>
             </li>
             <li class="nav-item mx-2">
-                <button class="nav-link module fw-bold text-light bg-info bg-opacity-25" id="module-3" value="7c1f7fc4-ab3a-486f-b7fd-4ea9b99b2571" type="button">Module 3</button>
+                <button class="nav-link module fw-bold text-light bg-info bg-opacity-25" id="module-3" data-module="7c1f7fc4-ab3a-486f-b7fd-4ea9b99b2571" type="button">Module 3</button>
             </li>
         </ul>
     </div>
@@ -58,16 +57,14 @@ else //not logged in
 
 @section Scripts {
     <script>
-        $(".module").on("click", function () {
-            $(".module.active").removeClass("active").addClass("bg-opacity-25");
-            $(this).addClass("active").removeClass("bg-opacity-25");
-        });
-
         $(document).ready(function () {
+            loadModuleContent($(".module.active").data('module'));
+
             // Handle click events on module buttons
-            $('.module').click(function () {
-                var moduleId = $(this).data('module');
-                loadModuleContent(moduleId);
+            $(".module").on("click", function () {
+                $(".module.active").removeClass("active").addClass("bg-opacity-25");
+                $(this).addClass("active").removeClass("bg-opacity-25");
+                loadModuleContent($(this).data('module'));
             });
 
             // Function to load module content via AJAX
@@ -77,7 +74,29 @@ else //not logged in
                     type: 'GET',
                     data: { moduleId: moduleId },
                     success: function (response) {
-                        $('#module-content').html(response);
+                        $.each(response, function (index) {
+                            var html = "";
+                            if (response[index].role === "User") {
+                                html = `<div class="chat outgoing">
+                                                <div class="chat-content">
+                                                    <div class="chat-details">
+                                                        <i class="bi bi-person-circle fs-3"></i>
+                                                        ${response[index].context}
+                                                    </div>
+                                                </div>
+                                            </div>`;
+                            } else {
+                                html = `<div class="chat incoming">
+                                            <div class="chat-content">
+                                                <div class="chat-details">
+                                                    <i class="bi bi-robot fs-3"></i>
+                                                    ${response[index].context}
+                                                </div>
+                                            </div>
+                                        </div>`;
+                            }
+                            $(".chat-container").append(html);
+                        });
                     },
                     error: function (xhr, status, error) {
                         console.error(xhr.responseText);
